--- a/day 18-Practice-23/index.html
+++ b/day 18-Practice-23/index.html
@@ -14,6 +14,7 @@
 <body>
     <!-- <script src="script.js"></script> -->
     <!-- <script src="practice.js"></script> -->
-    <script src="practice-23.js"></script>
+    <!-- <script src="practice-23.js"></script> -->
+    <script src="practice-24.js"></script>
 </body>
 </html>
