Lecture day 25 solved questions

--- a/day 18-Practice-23-25/index.html
+++ b/day 18-Practice-23-25/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="script.js"></script> -->
     <!-- <script src="practice.js"></script> -->
     <!-- <script src="practice-23.js"></script> -->
-    <script src="practice-24.js"></script>
+    <!-- <script src="practice-24.js"></script> -->
+    <script src="practice-25.js"></script>
 </body>
 </html>
