Day 33 lecture done with Assignement Basic Pattern problem

--- a/DSA in JS/Day-33/index.html
+++ b/DSA in JS/Day-33/index.html
@@ -7,5 +7,6 @@
 </head>
 <body style="background-color: black; color: blanchedalmond;">
     <script src="dsa-33.js"></script>
+    <script src="dsa-34.js"></script>
 </body>
 </html>
