--- a/DSA in JS/Day-33-34/index.html
+++ b/DSA in JS/Day-33-34/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 32-</title>
+    <title>Day 33-34</title>
 </head>
 <body style="background-color: black; color: blanchedalmond;">
     <script src="dsa-33.js"></script>
