Dsa-40 & 41 bubble sort, selection sort, insertion sort

--- a/DSA in JS/Day-40/index.html
+++ b/DSA in JS/Day-40/index.html
@@ -8,5 +8,6 @@
 <body style="background-color: black; color: wheat">
     
     <script src="dsa-40.js"></script>
+    <script src="dsa-41.js"></script>
 </body>
 </html>
