day 44 addEventListener types & dsa 41 insertion, selection, & bubble sort, and Time & Space complexity

--- a/DSA in JS/Day-41/index.html
+++ b/DSA in JS/Day-41/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Reaction Game</title>
+    <title>Document</title>
 </head>
-<body>
+<body style="background-color: black; color: wheat">
     
+    <script src="dsa-42.js"></script>
 </body>
 </html>
