day-48 final DOM & few BOM. localStorage, sessionStorage, cookie, classList & toggle functions Done.

--- a/Day-46-48/index.html
+++ b/Day-46-48/index.html
@@ -17,6 +17,22 @@
         <button class="btn"></button>
     </div>
     </main>
-    <script src="day-46.js"></script>
+
+    <div class="day-48">
+        <div class="first">
+            <button class="b48-1">click me fut</button>
+        </div>
+        <div class="second">
+            <button id="b48-2">Backword</button>
+            <button id="b48-3">Forward</button>
+        </div>
+
+        <div class="third">
+            <button>See me & Click me</button>
+        </div>
+
+    </div>
+    <!-- <script src="day-46.js"></script> -->
+    <script src="day-48.js"></script>
 </body>
 </html>
