--- a/DSA in JS/Day-51 Strings-Ques-Day-52/index.html
+++ b/DSA in JS/Day-51 Strings-Ques-Day-52/index.html
@@ -8,6 +8,7 @@
 <body style="background-color: black; color: whitesmoke;">
     <!-- <script src="dsa-51.js"></script> -->
     <!-- <script src="dsa-52.js"></script> -->
-    <script src="dsa-53.js"></script>
+    <!-- <script src="dsa-53.js"></script> -->
+    <script src="dsa-54.js"></script>
 </body>
 </html>
