--- a/Day 57 58 59 OOPs/index.html
+++ b/Day 57 58 59 OOPs/index.html
@@ -6,6 +6,7 @@
     <title>OPPS.</title>
 </head>
 <body style="background-color: rgb(39, 39, 39); color: wheat;">
-    <script src="day-57.js"></script>
+    <!-- <script src="day-57.js"></script> -->
+    <script src="day-58.js"></script>
 </body>
 </html>
