tripco web-design

--- a/Web Pages Design/Tripco/index.html
+++ b/Web Pages Design/Tripco/index.html
@@ -94,7 +94,7 @@
                 Many places are very famous, beautiful, clean, and will give a very deep, <br> rich impression to visitors and make them come back.
             </p>
         </div>
-        <div class="bottom">
+        <div class="bottom2">
             <div class="place">
                 <div class="image">
                     <img src="/images/Hero.png" alt="">
