Completed the design with JS for dynamically load the cards

--- a/Web Pages Design/Tripco/index.html
+++ b/Web Pages Design/Tripco/index.html
@@ -1,101 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tripco</title>
     <!-- Add your CSS file below -->
-     <link rel="stylesheet" href="style.css">
-     <!-- Google font -->
-      <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Courgette&family=Edu+QLD+Hand:wght@400..700&family=Hanalei+Fill&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Oswald:wght@200..700&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Rubik+Dirt&family=TikTok+Sans:opsz,wght@12..36,300..900&family=UoqMunThenKhung&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <!-- Google font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alumni+Sans+SC:ital,wght@0,100..900;1,100..900&family=Courgette&family=Edu+QLD+Hand:wght@400..700&family=Hanalei+Fill&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Oswald:wght@200..700&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Rubik+Dirt&family=TikTok+Sans:opsz,wght@12..36,300..900&family=UoqMunThenKhung&display=swap"
+      rel="stylesheet"
+    />
 
-      <!-- Remix icon -->
-       <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
-</head>
-<body>
+    <!-- Remix icon -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- Page content goes here -->
     <nav>
-        <p>Tripco</p>
-        <div class="mid">
-            <a href="">Home</a>
-            <a href="">Ticket</a>
-            <a href="">Explore</a>
-            <a href="">Activity</a>
-        </div>
-        <div class="right">
-            <a href="">Sign in</a>
-            <a href="">Sign up</a>
-        </div>
+      <p>Tripco</p>
+      <div class="mid">
+        <a href="">Home</a>
+        <a href="">Ticket</a>
+        <a href="">Explore</a>
+        <a href="">Activity</a>
+      </div>
+      <div class="right">
+        <a href="">Sign in</a>
+        <a href="">Sign up</a>
+      </div>
     </nav>
 
     <div class="heroic">
-        <div class="top-text">
-            <p>Explore the whole <span class="india">INDIA</span> <br>and enjoy its beauty</p>
-            <p>Find and write about your experiences around the India.</p>
+      <div class="top-text">
+        <p>
+          Explore the whole <span class="india">INDIA</span> <br />and enjoy its
+          beauty
+        </p>
+        <p>Find and write about your experiences around the India.</p>
+      </div>
+      <img src="/images/Hero.png" alt="" />
+      <div class="bottom">
+        <div class="inner-top">
+          <div class="left">
+            <a href="">Hostelry</a>
+            <a href="">Flights</a>
+            <a href="">Bus & Shuttle</a>
+            <a href="">Cars</a>
+          </div>
+          <div class="right">
+            <p>Last Searching</p>
+            <i class="ri-arrow-right-s-line"></i>
+          </div>
         </div>
-        <img src="/images/Hero.png" alt="">
-        <div class="bottom">
-            <div class="inner-top">
-                <div class="left">
-                    <a href="">Hostelry</a>
-                <a href="">Flights</a>
-                <a href="">Bus & Shuttle</a>
-                <a href="">Cars</a>
-                </div>
-                <div class="right">
-                    <p>Last Searching</p>
-                    <i class="ri-arrow-right-s-line"></i>
-                </div>
+        <hr />
+        <div class="inner-bottom">
+          <div class="upper">
+            <p>Destination</p>
+            <p>Check-in</p>
+            <p>Check-out</p>
+            <p>Room & Guest</p>
+          </div>
+          <div class="down">
+            <div class="down-parts">
+              <i class="ri-map-pin-fill"></i>
+              <p>Patna, Br</p>
             </div>
-            <hr>
-            <div class="inner-bottom">
-                <div class="upper">
-                    <p>Destination</p>
-                    <p>Check-in</p>
-                    <p>Check-out</p>
-                    <p>Room & Guest</p>
-                </div>
-                <div class="down">
-                    <div class="down-parts">
-                        <i class="ri-map-pin-fill"></i>
-                        <p>Patna, Br</p>
-                    </div>
-                    <div class="down-parts">
-                        <i class="ri-calendar-fill"></i>
-                        <p>Sat. 2 Dec 2025</p>
-                    </div>
-                    <div class="down-parts">
-                        <i class="ri-calendar-fill"></i>
-                        <p>Tue. 5 Dec 2025</p>
-                    </div>
-                    <div class="down-parts">
-                        <i class="ri-user-fill"></i>
-                        <p>1Room, 2Guest</p>
-                    </div>
-                    <div class="search">
-                        <i class="ri-search-line"></i>
-                        <p>Search</p>
-                    </div>
-                </div>
+            <div class="down-parts">
+              <i class="ri-calendar-fill"></i>
+              <p>Sat. 2 Dec 2025</p>
             </div>
+            <div class="down-parts">
+              <i class="ri-calendar-fill"></i>
+              <p>Tue. 5 Dec 2025</p>
+            </div>
+            <div class="down-parts">
+              <i class="ri-user-fill"></i>
+              <p>1Room, 2Guest</p>
+            </div>
+            <div class="search">
+              <i class="ri-search-line"></i>
+              <p>Search</p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <div class="section2">
-        <div class="top">
-            <div class="left">
-                <p>Popular Place</p>
-            <p>Let's enjoy this heaven in India</p>
-            </div>
-            <p class="right">
-                Many places are very famous, beautiful, clean, and will give a very deep, <br> rich impression to visitors and make them come back.
-            </p>
+      <div class="top">
+        <div class="left">
+          <p>Popular Place</p>
+          <p>Let's enjoy this heaven in India</p>
         </div>
-        <div class="bottom2">
-            <div class="place">
+        <p class="right">
+          Many places are very famous, beautiful, clean, and will give a very
+          deep, <br />
+          rich impression to visitors and make them come back.
+        </p>
+      </div>
+      <div class="bottom2">
+        <!-- <div class="place">
                 <div class="image">
                     <img src="/images/Hero.png" alt="">
                 </div>
@@ -105,14 +113,111 @@
                         <i class="ri-map-pin-fill"></i>
                     <p>Kailash, Himalai</p>
                 </div>
-            </div>
+            </div> -->
+      </div>
+    </div>
 
+    <div class="section3">
+      <div class="text3">
+        <p>Travel to make sweet memories</p>
+        <p>Find trips that fit a flexible lifestyle</p>
+      </div>
+      <div class="bottom3">
+        <div class="left3"></div>
+        <div class="right3">
+          <div class="image3">
+            <img src="/images/sec3_hill.jpg" alt="" />
+          </div>
+          <div class="user-card card1">
+            <div class="dp">
+              <img src="/images/user_1.png" alt="" />
+            </div>
+            <div class="user-info">
+              <p class="name">Anirudh Rampur</p>
+              <div class="rating">
+                <i class="ri-star-s-fill"></i>
+                <p>4.9</p>
+              </div>
+            </div>
+          </div>
+          <div class="user-card card2">
+            <div class="dp">
+              <img src="/images/user_2.png" alt="" />
+            </div>
+            <div class="user-info">
+              <p class="name">Anirudh Rampur</p>
+              <div class="rating">
+                <i class="ri-star-s-fill"></i>
+                <p>4.9</p>
+              </div>
+            </div>
+          </div>
+          <div class="user-card card3">
+            <div class="dp">
+              <img src="/images/user_3.png" alt="" />
+            </div>
+            <div class="user-info">
+              <p class="name">Anirudh Rampur</p>
+              <div class="rating">
+                <i class="ri-star-s-fill"></i>
+                <p>4.9</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section4">
+      <div class="text4">
+        <div class="left4">
+          <h3>Explore more</h3>
+          <p>Let's go on an adventure</p>
+        </div>
+        <p class="right4">
+          All-inclutions vacations and fights to the Cardbean, indonesian, and
+          <br />
+          more than 1,300 destionations in India. Let's explore now.
+        </p>
+      </div>
+      <div class="selectDiv">
+        <div class="options">
+          <p>Popular destionation</p>
+          <p>Islands</p>
+          <p>Surting</p>
+          <p>Surting</p>
+          <p>Nation parks</p>
+          <p>Lake</p>
+          <p>Beast</p>
+          <p>Camp</p>
+        </div>
+        <div class="filter">
+          <p>Filter</p>
+          <i class="ri-equalizer-2-line"></i>
+        </div>
+      </div>
+
+      <div class="placesDiv4"></div>
+      <div class="more4">Show more</div>
+    </div>
+
+    <div class="section5">
+        <div class="text5">
+            <h3>Let's go on an adventure</h3>
+            <p>Find and book a great experience</p>
+        </div>
+
+        <div class="staps">
+            <img src="/images/stamp.png" alt="">
+        </div>
+        <div class="arrows">
+            <i class="ri-arrow-left-line"></i>
+            <i class="ri-arrow-right-line right-arrow"></i>
         </div>
     </div>
-    
-     <script src="script.js"></script>
-
-</body>
-<!-- https://sites.google.com/view/web-design-ui-ux/web_design/?tripco-travel-landing-page -->
- <!-- GSAP scroll -->
+    <script src="script.js"></script>
+  </body>
+  <!-- https://sites.google.com/view/web-design-ui-ux/web_design/?tripco-travel-landing-page -->
+  <!-- GSAP scroll -->
   <!-- Cuberto  -->
+</html>
